tests/snapshots/diffline_frames__the_finder_with_a_query.snap
---
source: tests/diffline_frames.rs
expression: "frame(\"/sid\")?"
---
 DIFFLINE  ⎇ working tree   working tree   branch…main                                                                         +19  −4  │  2 files  │  1 queued 
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ● 1 queued · ␣c ──
 CHANGES                      2 │ DIFF  src/layout/solver.rs                                                                                 blame off │ ctx ±3 
────────────────────────────────│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 src/layout/                    │▌             @@ -186,6 +186,10 @@ impl Solver {                                                                               
▌ M solver.rs       ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                    
 src/ui/            │  FILES   HUNKS   SYMBOLS   LIVE GREP                                                                         ⇥ scope │                    
  A sidebar.rs      ├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                    
                    │ ❯ sid█                                                                                                     1 results │                    
                    ├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                    
                    │▌ A src/ui/sidebar.rs                         +7 −0 │src/ui/sidebar.rs                                                │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │                                                    │                                                                 │                    
                    │ ↑↓ move · ↵ jump · ⇥ scope · esc close                                                                               │                    
                    └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                    
                                │                                                                                                                               
                                │                                                                                                                               
                                │                                                                                                                               
                                │                                                                                                                               
                                │                                                                                                                               
 SEARCH  src/layout/solver.rs  1/7                                                        j/k move · }/]c hunk/change · ␣ leader · : commands · ␣? help   ready
